--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <h3 class="mt-1 text-center" style="color: rgb(96, 105, 110);">Login</h3>
     <div>
         <span class="p-float-label mt-4 p-2">
-            <input style="width: 300px;" type="text" [(ngModel)]="credenciaisUsuario.email" pInputText> 
+            <input style="width: 300px;" type="email" [(ngModel)]="credenciaisUsuario.email" pInputText> 
             <label class="pl-2" for="inputtext">Email</label>
         </span>
     </div>
@@ -15,8 +15,9 @@
     </div>
 
     <div class="mt-3 text-center" style="padding: 0 auto;">
-        <button class="btn btn-success px-5" [disabled]="desabilitarBotaoEntrar()" 
+        <button class="btn btn-success px-5" [disabled]="processandoOperacao || desabilitarBotaoEntrar()" 
             (click)="efetuarLogin()">
+            <i class="fas " [ngClass]="processandoOperacao ? 'fa-spin fa-circle-notch' : 'fa-sign-in-alt'"></i>
             Entrar
         </button>
     </div>
