--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,9 @@
+body {
+    background: linear-gradient(rgba(0, 0, 0, 0.158), rgba(0, 0, 0, 0.171));
+    background-size: cover;
+    height: 100vh;
+}
+
 .container-login {
     position: absolute;
     top: 50%;
@@ -5,6 +11,6 @@
     transform: translate(-50%, -50%);
     width: 320px; 
     height: 300px; 
-    background-color: rgba(159, 144, 255, 0.3); 
-    border-radius: 1%;
+    background-color: rgba(133, 135, 136, 0.247); 
+    border-radius: 1.5%;
 }
