--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,26 +1,28 @@
-<div class="container-login">
-    <h3 class="mt-1 text-center" style="color: rgb(96, 105, 110);">Login</h3>
-    <div>
-        <span class="p-float-label mt-4 p-2">
-            <input style="width: 300px;" type="email" [(ngModel)]="credenciaisUsuario.email" pInputText> 
-            <label class="pl-2" for="inputtext">Email</label>
-        </span>
+<body>
+    <div class="container-login">
+        <h3 class="mt-1 text-center" style="color: rgb(96, 105, 110);">Login</h3>
+        <div>
+            <span class="p-float-label mt-4 p-2">
+                <input style="width: 300px;" type="email" [(ngModel)]="credenciaisUsuario.email" pInputText> 
+                <label class="pl-2" for="inputtext">Email</label>
+            </span>
+        </div>
+    
+        <div>
+            <span class="p-float-label mt-3 p-2">
+                <input style="width: 300px;" type="password" [(ngModel)]="credenciaisUsuario.senha" pInputText> 
+                <label class="pl-2" for="inputtext">Senha</label>
+            </span>
+        </div>
+    
+        <div class="mt-3 text-center" style="padding: 0 auto;">
+            <button class="btn btn-success px-5" [disabled]="processandoOperacao || desabilitarBotaoEntrar()" 
+                (click)="efetuarLogin()">
+                <i class="fas " [ngClass]="processandoOperacao ? 'fa-spin fa-circle-notch' : 'fa-sign-in-alt'"></i>
+                Entrar
+            </button>
+        </div>
     </div>
-
-    <div>
-        <span class="p-float-label mt-3 p-2">
-            <input style="width: 300px;" type="password" [(ngModel)]="credenciaisUsuario.senha" pInputText> 
-            <label class="pl-2" for="inputtext">Senha</label>
-        </span>
-    </div>
-
-    <div class="mt-3 text-center" style="padding: 0 auto;">
-        <button class="btn btn-success px-5" [disabled]="processandoOperacao || desabilitarBotaoEntrar()" 
-            (click)="efetuarLogin()">
-            <i class="fas " [ngClass]="processandoOperacao ? 'fa-spin fa-circle-notch' : 'fa-sign-in-alt'"></i>
-            Entrar
-        </button>
-    </div>
-</div>
+</body>
 
 <app-toasty #toastyComponent></app-toasty>
