--- a/src/app/paciente/cadastro-paciente/cadastro-paciente.component.html
+++ b/src/app/paciente/cadastro-paciente/cadastro-paciente.component.html
@@ -120,7 +120,9 @@
                 </span>
             </div>
 
-            <i class="" [ngClass]="buscandoEnderecoPeloCEP ? 'fas fa-spin fa-circle-notch' : null"></i>
+            <span class="mt-1">
+                <i [ngClass]="buscandoEnderecoPeloCEP ? 'fas fa-spin fa-circle-notch' : null"></i>
+            </span>
         </div>
     </div>
 
@@ -129,8 +131,9 @@
             <i class="fas fa-arrow-circle-left"></i>
             Voltar
         </button>
-        <button class="btn btn-success" [disabled]="informacoesPacienteNaoEstaoValidas()" (click)="cadastrarPaciente()">
-            <i class="fas fa-check-circle"></i>
+        <button class="btn btn-success" [disabled]="processandoOperacao || informacoesPacienteNaoEstaoValidas()" 
+            (click)="cadastrarPaciente()">
+            <i class="fas " [ngClass]="processandoOperacao ? 'fa-spin fa-circle-notch' : 'fa-check-circle'"></i>
             Confirmar
         </button>
     </p-footer>
