--- a/src/app/paciente/edicao-paciente/edicao-paciente.component.html
+++ b/src/app/paciente/edicao-paciente/edicao-paciente.component.html
@@ -1,56 +1,26 @@
-<button class="btn btn-success px-5" (click)="abrirDialogCadastroPaciente = true">
-    <i class="fas fa-plus"></i>
-    Cadastrar Paciente
+<button class="btn btn-warning" pTooltip="Editar" tooltipPosition="bottom" (click)="abrirDialogEdicaoPaciente = true">
+    <i class="fas fa-pen text-light"></i>
 </button>
 
-<p-dialog [visible]="abrirDialogCadastroPaciente" [modal]="true" [resizable]="false" 
+<p-dialog [visible]="abrirDialogEdicaoPaciente" [modal]="true" [resizable]="false" 
     [blockScroll]="true" [draggable]="false" [closable]="false">
 
     <p-header>
-        Cadastrar Paciente
+        Alterar informações de <b>{{ paciente.nome }}</b>
     </p-header>
 
     <div class="container mt-4 text-left">
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-5">
-                <span class="p-float-label">
-                    <input type="text" style="width: 350px;" [(ngModel)]="cadastroPaciente.nome" pInputText> 
-                    <label for="inputtext">Nome</label>
-                </span>
-            </div>
-
-            <div class="col-12 col-md-6 col-lg-4 mt-2">
-                Sexo:
-                <p-radioButton [value]="'F'" class="pl-2" [(ngModel)]="cadastroPaciente.sexo"></p-radioButton> Feminino
-                <p-radioButton [value]="'M'" class="pl-2" [(ngModel)]="cadastroPaciente.sexo"></p-radioButton> Masculino
-            </div>
-
-            <div class="col-12 col-md-12 col-lg-3">
-                <p-dropdown [options]="etniasDropdown" [(ngModel)]="cadastroPaciente.etnia" name="etniasDropdown" 
-                    [style]="{'width': '200px'}" [scrollHeight]="'120px'" 
-                    placeholder="Selecione uma Etnia">
-                </p-dropdown>
-            </div>
-        </div>
-
-        <div class="row mt-4">
             <div class="col-12 col-md-4">
                 <span class="p-float-label">
-                    <p-inputMask mask="99/99/9999" [(ngModel)]="cadastroPaciente.dataNascimento"></p-inputMask>
-                    <label>Data de Nascimento</label>
-                </span>
-            </div>
-
-            <div class="col-12 col-md-4">
-                <span class="p-float-label">
-                    <p-inputMask mask="(99) 99999-9999" [(ngModel)]="cadastroPaciente.telefone"></p-inputMask>
+                    <p-inputMask mask="(99) 99999-9999" [(ngModel)]="pacienteSelecionado.telefone"></p-inputMask>
                     <label>Telefone</label>
                 </span>
             </div>
 
             <div class="col-12 col-md-4">
                 <span class="p-float-label">
-                    <p-inputMask mask="(99) 99999-9999" [(ngModel)]="cadastroPaciente.telefoneRecado"></p-inputMask>
+                    <p-inputMask mask="(99) 99999-9999" [(ngModel)]="pacienteSelecionado.telefoneRecado"></p-inputMask>
                     <label>Telefone para recado</label>
                 </span>
             </div>
@@ -61,7 +31,7 @@
         <div class="row mt-4">
             <div class="col-12 col-md-6 col-lg-6">
                 <span class="p-float-label">
-                    <input type="text" style="width: 380px;" [(ngModel)]="cadastroEndereco.logradouro" 
+                    <input type="text" style="width: 380px;" [(ngModel)]="edicaoEndereco.logradouro" 
                         [disabled]="buscandoEnderecoPeloCEP" pInputText> 
                     <label for="inputtext">Logradouro</label>
                 </span>
@@ -69,7 +39,7 @@
 
             <div class="col-12 col-md-6 col-lg-2">
                 <span class="p-float-label">
-                    <input type="text" style="width: 100px;" [(ngModel)]="cadastroEndereco.numero" 
+                    <input type="text" style="width: 100px;" [(ngModel)]="edicaoEndereco.numero" 
                         [disabled]="buscandoEnderecoPeloCEP" pInputText> 
                     <label for="inputtext">Número</label>
                 </span>
@@ -77,7 +47,7 @@
 
             <div class="col-12 col-md-6 col-lg-4">
                 <span class="p-float-label">
-                    <input type="text" style="width: 270px;" [(ngModel)]="cadastroEndereco.complemento" 
+                    <input type="text" style="width: 270px;" [(ngModel)]="edicaoEndereco.complemento" 
                         [disabled]="buscandoEnderecoPeloCEP" pInputText> 
                     <label for="inputtext">Complemento</label>
                 </span>
@@ -87,7 +57,7 @@
         <div class="row mt-4">
             <div class="col-12 col-md-6 col-lg-5">
                 <span class="p-float-label">
-                    <input type="text" style="width: 300px;" [(ngModel)]="cadastroEndereco.bairro" 
+                    <input type="text" style="width: 300px;" [(ngModel)]="edicaoEndereco.bairro" 
                         [disabled]="buscandoEnderecoPeloCEP" pInputText> 
                     <label for="inputtext">Bairro</label>
                 </span>
@@ -95,7 +65,7 @@
 
             <div class="col-12 col-md-6 col-lg-7">
                 <span class="p-float-label">
-                    <input type="text" style="width: 400px;" [(ngModel)]="cadastroEndereco.cidade" 
+                    <input type="text" style="width: 400px;" [(ngModel)]="edicaoEndereco.cidade" 
                         [disabled]="buscandoEnderecoPeloCEP" pInputText> 
                     <label for="inputtext">Cidade</label>
                 </span>
@@ -105,7 +75,7 @@
         <div class="row mt-4">
             <div class="col-3">
                 <span class="p-float-label">
-                    <p-inputMask mask="99999-999" [(ngModel)]="cadastroEndereco.cep" 
+                    <p-inputMask mask="99999-999" [(ngModel)]="edicaoEndereco.cep" 
                         (ngModelChange)="validarCampoCEPParaPreenchimentoAutomatico()">
                     </p-inputMask>
                     <label for="inputtext">CEP</label>
@@ -114,7 +84,7 @@
 
             <div class="col-2">
                 <span class="p-float-label">
-                    <input type="text" style="width: 70px;" max="2" [(ngModel)]="cadastroEndereco.uf" 
+                    <input type="text" style="width: 70px;" max="2" [(ngModel)]="edicaoEndereco.uf" 
                         [disabled]="buscandoEnderecoPeloCEP" pInputText> 
                     <label for="inputtext">UF</label>
                 </span>
@@ -132,8 +102,8 @@
             Voltar
         </button>
         
-        <button class="btn btn-success" [disabled]="processandoOperacao || informacoesPacienteNaoEstaoValidas()" 
-            (click)="cadastrarPaciente()">
+        <button class="btn btn-success" [disabled]="processandoOperacao || informacoesPacienteNaoEstaoValidas() 
+            || informacoesParaEdicaoNaoMudaram()" (click)="editarInformacoesPaciente()">
             <i class="fas " [ngClass]="processandoOperacao ? 'fa-spin fa-circle-notch' : 'fa-check-circle'"></i>
             Confirmar
         </button>
