--- a/src/app/paciente/tabela-pacientes/tabela-pacientes.component.html
+++ b/src/app/paciente/tabela-pacientes/tabela-pacientes.component.html
@@ -42,7 +42,8 @@
                         <i class="fas fa-info"></i>
                     </button>
 
-                    <button class="btn btn-secondary mx-2" pTooltip="Histórico" tooltipPosition="bottom">
+                    <button class="btn btn-secondary mx-2" pTooltip="Históricos" tooltipPosition="bottom"
+                        (click)="redirecionarParaPaginaHistoricosDoPaciente(paciente)">
                         <i class="far fa-address-card"></i>
                     </button>
 
