--- a/src/app/paciente-historicos/informacoes-historicos/informacoes-historicos.component.html
+++ b/src/app/paciente-historicos/informacoes-historicos/informacoes-historicos.component.html
@@ -1,3 +1,56 @@
-<h1>Chegou</h1>
+<div class="bg-carregando-dados" *ngIf="processandoOperacao">
+    <div class="info-carregando-dados">
+      <p-progressSpinner [style]="{width: '120px', height: '120px'}"></p-progressSpinner>
+      <p class="h5">Carregando Históricos...</p>
+    </div>
+</div>
+
+<div *ngIf="!processandoOperacao" class="col-12 col-sm-8 mt-4">
+<p-fieldset [toggleable]="true">
+    <p-header>
+        Paciente
+    </p-header>
+
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <div><b>Nome: </b>{{ paciente.nome }}</div>
+
+            <div>
+                <span><b>Sexo: </b>{{ paciente.sexo }}</span>
+                <span class="px-3"><b>Etnia: </b>{{ paciente.etnia }}</span>      
+            </div>
+            
+            <div><b>Data de Nascimento: </b>{{ paciente.dataNascimento }}</div>
+            <div><b>Telefone: </b>{{ paciente.telefone }}</div>
+            <div *ngIf="paciente.telefoneRecado"><b>Telefone para Recado: </b>{{ paciente.telefoneRecado }}</div>
+        </div>
+
+        <div class="col-12 col-md-6">
+            <div><b>Logradouro: </b>{{ paciente.endereco.logradouro }}</div>
+            <div><b>Número: </b>{{ paciente.endereco.numero }}</div>
+            <div *ngIf="paciente.endereco.complemento"><b>Complemento: </b>{{ paciente.endereco.complemento }}</div>
+            <div><b>Bairro: </b>{{ paciente.endereco.bairro }}</div>
+            <div><b>Cidade: </b>{{ paciente.endereco.cidade }}</div>
+
+            <div>
+                <span><b>CEP: </b>{{ paciente.endereco.cep }}</span>
+                <span class="pl-3"><b>UF: </b>{{ paciente.endereco.uf }}</span>
+            </div>
+
+        </div>
+    </div>
+</p-fieldset>
+</div>
+
+<div *ngIf="!processandoOperacao" class="container-fluid mt-5">
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <app-fieldset-historico-social [previaHistoricoSocial]="historicosPaciente.previaHistoricoSocial" 
+                [dataProximaAtualizacao]="dataProximaAtualizacaoHistorico.dataProximaAtualizacaoHistoricoSocial">
+            </app-fieldset-historico-social>
+        </div>
+    </div>
+</div>
+
 
 <app-toasty #toastyComponent></app-toasty>
